--- a/t_jsp_pro/src/main/webapp/WEB-INF/web.xml
+++ b/t_jsp_pro/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,9 @@
   	<url-pattern>/MainController</url-pattern>
   </servlet-mapping>
   
+  <!--  필터 시작 -->
+  
+  
   <filter>
   	<filter-name>EncodingFilter</filter-name>
   	<filter-class>filter.EncodingFilter</filter-class>
@@ -20,10 +23,55 @@
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
-  <!-- error-page>
-  	<error-code>404</error-code>
-  	<location>/WEB-INF/error/404.html</location>
+  
+  <filter>
+  	<filter-name>LoginFilter</filter-name>
+  	<filter-class>filter.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>LoginFilter</filter-name>
+  	<url-pattern>/emps</url-pattern>
+  	<url-pattern>/emps/*</url-pattern>
+  	<url-pattern>/depts</url-pattern>
+  	<url-pattern>/depts/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+  	<filter-name>PermFilter</filter-name>
+  	<filter-class>filter.EncodingFilter</filter-class>
+  </filter>
+   <filter-mapping>
+  	<filter-name>PermFilter</filter-name>
+  	<url-pattern>/emps</url-pattern>
+  	<url-pattern>/emps/*</url-pattern>
+  	<url-pattern>/depts</url-pattern>
+  	<url-pattern>/depts/*</url-pattern>
+  </filter-mapping>
+  
+  
+  
+   
+  <!--rror-page>
+	  	<error-code>404</error-code>
+	  	<location>/WEB-INF/error/404.html</location>
   </error-page -->
+  
+   <!--  error-page>
+	  	<error-code>403</error-code>
+	  	<location>/WEB-INF/error/403.html</location>
+  </error-page -->
+  
+   
+   <!--  error-page>
+	  	<error-code>500</error-code>
+	  	<location>/WEB-INF/error/500.html</location>
+  </error-page -->
+  
+   <!-- error-page>
+	  	<exception-type>java.lang.RuntimeException</exception-type>
+	  	<location>/WEB-INF/error/exception.html</location>
+  </error-page -->
+  
   
   <!-- error-page>
   	<exception-type>java.lang.NullPointerException</exception-type>
