--- a/jsp_pro/src/main/webapp/WEB-INF/web.xml
+++ b/jsp_pro/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,20 @@
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <filter>
+  	<filter-name>LoginFilter</filter-name>
+  	<filter-class>filter.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>LoginFilter</filter-name>
+  	<url-pattern>/myinfo</url-pattern>
+  	<url-pattern>/emps</url-pattern>
+  	<url-pattern>/emps/*</url-pattern>
+  	<url-pattern>/depts</url-pattern>
+  	<url-pattern>/depts/*</url-pattern>
+  </filter-mapping>
+  
+  
   <!-- error-page>
   	<error-code>404</error-code>
   	<location>/WEB-INF/error/404.html</location>
