--- a/jsp_pro/src/main/webapp/WEB-INF/web.xml
+++ b/jsp_pro/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,7 @@
   	<url-pattern>/emps/*</url-pattern>
   	<url-pattern>/depts</url-pattern>
   	<url-pattern>/depts/*</url-pattern>
+  	<url-pattern>/</url-pattern>
   </filter-mapping>
   
   
