--- a/jsp_pro/src/main/webapp/WEB-INF/web.xml
+++ b/jsp_pro/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,7 @@
   	<url-pattern>/depts</url-pattern>
   	<url-pattern>/depts/*</url-pattern>
   	<url-pattern>/board/add</url-pattern>
+  	<url-pattern>/board/detail</url-pattern>
   </filter-mapping>
   
   
