--- a/sp_pro01/src/main/webapp/WEB-INF/web.xml
+++ b/sp_pro01/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,25 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<error-page>
+		<error-code>401</error-code>
+		<location>/WEB-INF/views/error/401.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>402</error-code>
+		<location>/WEB-INF/views/error/402.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/error/403.jsp</location>
+	</error-page>
+	
+	
+	<error-page>
+		<exception-type>java.lang.RuntimeException</exception-type>
+		<location>/WEB-INF/views/error/RuntimeException.jsp</location>
+	</error-page>
+	
+	
 </web-app>
